test/Fail/Issue6725.agda
{-# OPTIONS --cubical #-}
module Issue6725 where

open import Agda.Primitive
open import Agda.Builtin.Cubical.Path

variable
  â„“ : Level
  A : Set

data ð•€ : Set where
  zero one : ð•€
  seg : zero â‰¡ one

record R : Setâ‚‚ where
  field
    Î¦ : Setâ‚
    ze : Î¦
    on : Î¦
    se : ze â‰¡ on

record C : Setâ‚‚ where
  field
    Î¦ : ð•€ -> Setâ‚
    ze : Î¦ zero
    on : Î¦ one
    se : PathP (Î» i â†’ Î¦ (seg i)) ze on

-- implementation doesn't matter
rec : (a : R) -> ð•€ -> R.Î¦ a
rec a = ?

case : (a : C) -> (i : ð•€) -> C.Î¦ a i
-- replacing this definition with a ? avoids the problem
case a = Î» where
    zero -> ze
    one  -> on
    (seg i) -> se i
  where open C a

whoa : ð•€ -> ð•€ -> Set
whoa = rec alg where
  open R
  open C

  alg : R
  alg .Î¦ = ð•€ -> Set
  alg .ze = case Î» where
    .Î¦ _ â†’ Set
  alg .on = case Î» where
    .Î¦ _ â†’ Set
  -- commenting this case avoids the problem
  alg .se i = case Î» where
    .Î¦ _ â†’ {!!}
    .ze â†’ ?
    .on â†’ ?
